Simplify file service storage model
